# sheepTSexample

./: .gitignore  01runScrm1M.sh  02inferTs.py  LICENSE  README.md  pyproject.toml  recipe_17.5.trees  test1M.out.inf.ts  tiny_ts.ts  ts1  ts2
Notebooks/: 00TSintro.html  00TSintro.ipynb  01TSanalyses.html  01TSanalyses.ipynb  10Inference.html  10Inference.ipynb  40Coalescent_sims.html  40Coalescent_sims.ipynb
notebooks/: 00-tsintro.ipynb  01-tsanalyses.ipynb  02-inference.ipynb  03-slim_ts.ipynb  04-coalescence_sim.ipynb
