[tool.poetry]
name = "sheeptsexample"
version = "0.1.0"
description = "sheep treeseq tutorial"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
tskit = "^0.5.6"
matplotlib = "^3.8.3"
msprime = "^1.3.1"
jupyterlab = "^4.1.2"
nbstripout = "^0.7.1"
tsinfer = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
